--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "podaac-tig"
-version = "0.13.0-alpha.3"
+version = "0.13.0a3"
 description = "Tool for Image Generation (TIG)"
 authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
 license = "Apache-2.0"
@@ -16,13 +16,13 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.10, <3.13"
-numpy = "^1.26.4"
+numpy = "^2.2.1"
 matplotlib = "^3.8.3"
 netCDF4 = "^1.6.5"
-xarray = "^2024.2.0"
+xarray = "^2025.1.1"
 imageio = "^2.34.0"
 pygeogrids = "^0.5.0"
-cumulus-process = "^1.3.0"
+cumulus-process = "^1.4.0"
 requests = "^2.31.0"
 click = "^8.1.7"
 scipy = "^1.12.0"
@@ -30,10 +30,10 @@ scipy = "^1.12.0"
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.1"
 flake8 = "^7.0.0"
-pytest-cov = "^5"
+pytest-cov = "^6"
 pylint = "^3.0.3"
 Sphinx = "^7.2.6"
-moto = "^4.2.14"
+moto = "^5.0.26"
 mock = "^5.1.0"
 
 [tool.poetry.scripts]
@@ -41,7 +41,7 @@ tig = 'podaac.tig.cli:main'
 generate_hitide_config = 'podaac.tig.generate_hitide_config:generate_hitide_config_command'
 
 [tool.poetry.group.dev.dependencies]
-scikit-image = "^0.22.0"
+scikit-image = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
