--- a/.pylintrc
+++ b/.pylintrc
@@ -70,7 +70,9 @@ disable=raw-checker-failed,
         use-symbolic-message-instead,
         too-many-arguments,
 	  too-many-locals,
-        too-many-positional-arguments
+        too-many-positional-arguments,
+        broad-exception-caught,
+        broad-exception-raised
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
