--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -204,8 +204,9 @@ jobs:
            
       - name: Log in to the Container registry
         if: |
-          steps.pypi-test-publish.conclusion == 'success' ||
-          steps.pypi-publish.conclusion == 'success'||
+          github.ref == 'refs/heads/develop' ||
+          github.ref == 'refs/heads/main'    ||
+          startsWith(github.ref, 'refs/heads/release') ||
           github.event.head_commit.message == '/deploy sit' ||
           github.event.head_commit.message == '/deploy uat'
         uses: docker/login-action@v3
