--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -446,7 +446,7 @@ jobs:
           flavor: |
             latest=${{ github.ref == 'refs/heads/main' }}
           tags: |
-            type=semver,pattern={{raw}},value=${{ env.the_version }}
+            type=pep440,pattern={{version}},value=${{ env.the_version }}
             type=raw,value=${{ env.TARGET_ENV_LOWERCASE }}
 
 
