--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -247,7 +247,7 @@ jobs:
           flavor: |
             latest=${{ github.ref == 'refs/heads/main' }}
           tags: |
-            type=semver,pattern={{raw}},value=${{ env.new_version }}
+            type=pep440,pattern={{version}},value=${{ env.new_version }}
             type=raw,value=${{ env.TARGET_ENV_LOWERCASE }}
 
       - name: Set Build Source
